--- a/DTCD-DatasourcePanel/package.json
+++ b/DTCD-DatasourcePanel/package.json
@@ -15,7 +15,7 @@
     "@babel/preset-env": "7.13.12",
     "@rollup/plugin-alias": "3.1.2",
     "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-json": "4.1.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "11.2.1",
     "@rollup/plugin-replace": "2.4.2",
     "@types/jest": "26.0.22",
