--- a/DTCD-DatasourcePanel/package.json
+++ b/DTCD-DatasourcePanel/package.json
@@ -1,6 +1,6 @@
 {
   "name": "datasource-panel",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "main": "PrimitivePropertiesPanel.js",
   "scripts": {
     "test": "jest",
@@ -14,8 +14,8 @@
     "@babel/core": "7.13.14",
     "@babel/preset-env": "7.13.12",
     "@rollup/plugin-alias": "3.1.2",
-    "@rollup/plugin-commonjs": "^19.0.0",
-    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-commonjs": "19.0.0",
+    "@rollup/plugin-json": "4.1.0",
     "@rollup/plugin-node-resolve": "11.2.1",
     "@rollup/plugin-replace": "2.4.2",
     "@types/jest": "26.0.22",
@@ -25,14 +25,14 @@
     "commonjs": "0.0.1",
     "jest": "26.6.3",
     "rollup": "2.44.0",
-    "rollup-plugin-styles": "^1.2.3",
-    "rollup-plugin-vue": "^5.0.0",
+    "rollup-plugin-styles": "1.2.3",
+    "rollup-plugin-vue": "5.0.0",
     "sass": "1.32.8",
     "vue": "2.6.12",
     "vue-jest": "3.0.7",
     "vue-template-compiler": "2.6.12"
   },
   "dependencies": {
-    "v-calendar": "^2.2.1"
+    "v-calendar": "2.2.1"
   }
 }
